--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/supabase-adapter": "^1.4.1",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.2",
+    "@tanstack/react-query": "^5.51.15",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "aos": "^2.3.4",
@@ -33,6 +34,8 @@
     "next": "13.3.0",
     "next-auth": "^4.24.5",
     "nprogress": "^0.2.0",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
@@ -42,6 +45,7 @@
     "react-share": "^4.4.1",
     "react-slideshow-image": "^4.3.0",
     "react-social-media-embed": "^2.3.5",
+    "sequelize": "^6.37.3",
     "twilio": "^5.2.2",
     "uuid": "^10.0.0"
   }
