Download job feature

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-social-media-embed": "^2.3.5",
     "sequelize": "^6.37.3",
     "twilio": "^5.2.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5"
   }
 }
