--- a/package.json
+++ b/package.json
@@ -9,28 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/supabase-adapter": "^1.4.1",
-    "@supabase/ssr": "^0.4.0",
-    "@supabase/supabase-js": "^2.44.2",
-    "@tanstack/react-query": "^5.51.15",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
-    "ag-grid-react": "^32.2.0",
     "aos": "^2.3.4",
+    "ag-grid-react": "^32.2.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
-    "css-filter-converter": "^1.0.109",
-    "docx2html": "^1.3.2",
+    "@tanstack/react-query": "^5.51.15",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
-    "formik": "^2.4.1",
-    "framer-motion": "^11.0.8",
     "fs": "^0.0.1-security",
-    "html-docx-js": "^0.3.1",
-    "mammoth": "^1.6.0",
-    "mongoose": "^7.2.2",
     "net": "^1.0.2",
     "next": "13.3.0",
     "next-auth": "^4.24.5",
@@ -41,13 +29,12 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.3.1",
-    "react-quill": "^2.0.0",
-    "react-share": "^4.4.1",
     "react-slideshow-image": "^4.3.0",
     "react-social-media-embed": "^2.3.5",
-    "read-excel-file": "^5.8.4",
     "sequelize": "^6.37.3",
     "twilio": "^5.2.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
+    "read-excel-file": "^5.8.4"
   }
 }
