--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sequelize": "^6.37.3",
     "twilio": "^5.2.2",
     "uuid": "^10.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "read-excel-file": "^5.8.4"
   }
 }
