--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "ag-grid-react": "^32.2.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "@tanstack/react-query": "^5.51.15",
@@ -33,6 +34,7 @@
     "sequelize": "^6.37.3",
     "twilio": "^5.2.2",
     "uuid": "^10.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "read-excel-file": "^5.8.4"
   }
 }
